# test-rest-frameworks

go - fiber/: go.mod  main.go
python - fastapi/: pyproject.toml
python - fastapi + uvloop/: pyproject.toml
python - litestar/: main.py  pyproject.toml
python - litestar + uvloop/: pyproject.toml  setup.py
python - litestar + uvloop/pliteuvl/: __main__.py  main.c  main.py
