[tool.poetry]
name = "python - fastapi"
version = "0.1.0"
description = ""
authors = ["ZhymabekRoman <robanokssamit@yandex.ru>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
