[tool.poetry]
name = "pliteuvl"
version = "0.1.0"
description = ""
authors = ["ZhymabekRoman <robanokssamit@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
litestar = "^2.12.1"


[tool.poetry.group.dev.dependencies]
cython = "^3.0.11"
setuptools = "^75.1.0"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
