[tool.poetry]
name = "python - litestar"
version = "0.1.0"
description = ""
authors = ["ZhymabekRoman <robanokssamit@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.12.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
